complete shop-now page

--- a/shop-now.html
+++ b/shop-now.html
@@ -38,18 +38,349 @@
             <div class="list-text">Home</div>
             <div class="list-icon"><img src="/assets/images/product-details/Frame.png" alt=""></div>
         </div>
+
         <div class="list">
-            <div class="list-text">Shop</div>
-            <div class="list-icon"><img src="/assets/images/product-details/Frame.png" alt=""></div>
-        </div>
-        <div class="list">
-            <div class="list-text">Men</div>
-            <div class="list-icon"><img src="/assets/images/product-details/Frame.png" alt=""></div>
-        </div>
-        <div class="list">
-            <div class="list-text" style="color: black;">T-shirts</div>
+            <div class="list-text" style="color: black;">Casual</div>
         </div>
     </div>
+    <main class="main">
+        <section class="all-product container">
+            <div class="all-product-filter">
+                <div class="all-product-filter-text">
+                    <div class="text-1">Filters</div>
+                    <div class="menu-bar"><img src="/assets/images/Shop-now/menu.png" alt=""></div>
+                </div>
+                <div class="line"></div>
+                <div class="all-product-filter-category">
+                    <div class="category">
+                        <div class="category-text">T-shirts</div>
+                        <div class="frame">></div>
+                    </div>
+                    <div class="category">
+                        <div class="category-text">Shorts</div>
+                        <div class="frame">></div>
+                    </div>
+                    <div class="category">
+                        <div class="category-text">Shirts</div>
+                        <div class="frame">></div>
+                    </div>
+                    <div class="category">
+                        <div class="category-text">Hoodie</div>
+                        <div class="frame">></div>
+                    </div>
+                    <div class="category">
+                        <div class="category-text">Jeans</div>
+                        <div class="frame">></div>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="all-product-filter-price">
+                    <div class="all-product-filter-price-text">
+                        <div class="price-text">Price</div>
+                        <div class="cap"><img src="/assets/images/Shop-now/cap.png" alt=""></div>
+                    </div>
+                    <div class="all-product-filter-price-img"><img src="/assets/images/Shop-now/price.png" alt=""></div>
+                </div>
+                <div class="line"></div>
+                <div class="all-product-filter-colors">
+                    <div class="all-product-filter-colors-text">
+                        <div class="price-text">Colors</div>
+                        <div class="cap"><img src="/assets/images/Shop-now/cap.png" alt=""></div>
+                    </div>
+                    <div class="all-product-filter-colors-color">
+                        <img src="/assets/images/Shop-now/color.png" alt="">
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="all-product-filter-size">
+                    <div class="all-product-filter-size-text">
+                        <div class="price-text">Size</div>
+                        <div class="cap"><img src="/assets/images/Shop-now/cap.png" alt=""></div>
+                    </div>
+                    <div class="all-product-filter-size-all">
+                        <div class="size">XX-Small</div>
+                        <div class="size">X-Small</div>
+                        <div class="size">Small</div>
+                        <div class="size">Medium</div>
+                        <div class="size" style="background-color: black; color: white;">Large</div>
+                        <div class="size">X-Large</div>
+                        <div class="size">XX-Large</div>
+                        <div class="size">3X-Large</div>
+                        <div class="size">4X-Large</div>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="all-product-filter-style">
+                    <div class="all-product-filter-style-text">
+                        <div class="price-text">Size</div>
+                        <div class="cap"><img src="/assets/images/Shop-now/cap.png" alt=""></div>
+                    </div>
+                    <div class="all-product-filter-category">
+                        <div class="category">
+                            <div class="category-text">Casual</div>
+                            <div class="frame">></div>
+                        </div>
+                        <div class="category">
+                            <div class="category-text">Formal</div>
+                            <div class="frame">></div>
+                        </div>
+                        <div class="category">
+                            <div class="category-text">Party</div>
+                            <div class="frame">></div>
+                        </div>
+                        <div class="category">
+                            <div class="category-text">Gym</div>
+                            <div class="frame">></div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="all-product-filter-btn">
+                    <button>Apply Filter</button>
+                </div>
+            </div>
+            <div class="all-product-details">
+                <div class="all-product-details-text">
+                    <div class="text-1">Casual</div>
+                    <div class="text-2">
+                        <div class="t1">Showing 1-10 of 100 Products</div>
+                        <div class="t2">Sort by: <span style="color: black;">Most Popular</span></div>
+
+                    </div>
+
+                </div>
+                <div class="all-product-details-product">
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/product-details/p-2.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>Gradient Graphic T-shirt</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <div>
+                                    <p>$145</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/product-details/p-3.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>Polo with Tipping Details</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <p>$180</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/product-details/p-4.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>Black Striped T-shirt</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <div>
+                                    <p>$120</p>
+                                </div>
+                                <div class="offer">
+                                    <p>$150</p>
+                                </div>
+                                <div class="percentage">
+                                    -30%
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/new-product/2.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>SKINNY FIT JEANS</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <div>
+                                    <p>$240</p>
+                                </div>
+                                <div class="offer">
+                                    <p>$260</p>
+                                </div>
+                                <div class="percentage">
+                                    -20%
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/new-product/3.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>CHECKERED SHIRT</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <p>$180</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/new-product/4.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>SLEEVE STRIPED T-SHIRT</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <div>
+                                    <p>$130</p>
+                                </div>
+                                <div class="offer">
+                                    <p>$160</p>
+                                </div>
+                                <div class="percentage">
+                                    -30%
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/Top-selling/1.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>VERTICAL STRIPED SHIRT</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <div>
+                                    <p>$212</p>
+                                </div>
+                                <div class="offer">
+                                    <p>$232</p>
+                                </div>
+                                <div class="percentage">
+                                    -20%
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/Top-selling/2.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>COURAGE GRAPHIC T-SHIRT</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <div>
+                                    <p>$145</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="product-img"><img src="/assets/images/Top-selling/3.png" alt=""></div>
+                        <div class="product-text">
+                            <div class="">
+                                <h3>LOOSE FIT BERMUDA SHORTS</h3>
+                            </div>
+                            <div class="review-img"><img src="/assets/images/new-product/review.png" alt=""></div>
+                            <div class="price">
+                                <p>$80</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="all-product-details-pages">
+                    <div class="previous"><img src="/assets/images/Shop-now/previous.png" alt=""></div>
+                    <div class="number"><img src="/assets/images/Shop-now/Pagination numbers.png" alt=""></div>
+                    <div class="next"><img src="/assets/images/Shop-now/next.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+        <section class="offer-section container">
+            <div class="offer">
+                <div class="offer-section-text">
+                    <h5>STAY UPTO DATE ABOUT OUR LATEST OFFERS</h5>
+                </div>
+                <div class="offer-section-details">
+                    <div class="email">
+                        <div class="img"><img src="/assets/images/offer-section/email.png" alt=""></div>
+                        <div class="text"><span>Enter your email address</span></div>
+                    </div>
+                    <div class="subscribe">
+                        <p>Subscribe to Newsletter</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer container">
+        <div class="content">
+            <div class="logo">
+                <div class="logo-text">
+                    <div class="">
+                        <h6>SHOP.CO</h6>
+                    </div>
+                    <div class=""><span>We have clothes that suits your style and which you’re proud to wear. From women
+                            to men.</span></div>
+                </div>
+                <div class="social"><img src="/assets/images/footer/Social.png" alt=""></div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Company</div>
+                <div class="text-2">
+                    <div>About</div>
+                    <div>Features</div>
+                    <div>Works</div>
+                    <div>Career</div>
+                </div>
+
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Help</div>
+                <div class="text-2">
+                    <div>Customer Support</div>
+                    <div>Delivery Details</div>
+                    <div>Terms & Conditions</div>
+                    <div>Privacy Policy</div>
+                </div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">FAQ</div>
+                <div class="text-2">
+                    <div>Account</div>
+                    <div>Manage Deliveries</div>
+                    <div>Orders</div>
+                    <div>Payments</div>
+                </div>
+            </div>
+            <div class="help-menu">
+                <div class="text-1">Resources</div>
+                <div class="text-2">
+                    <div>Free eBooks</div>
+                    <div>Development</div>
+                    <div>How to - Blog</div>
+                    <div>Youtube Playlist</div>
+                </div>
+            </div>
+        </div>
+        <div class="line"></div>
+        <div class="copyrights">
+            <div class="text">
+                <p>Shop.co © 2000-2023, All Rights Reserved</p>
+            </div>
+            <div class="card"><img src="/assets/images/footer/card.png" alt=""></div>
+        </div>
+    </footer>
 </body>
 
 </html>
