Complete Add-to-cart-page

--- a/product-detail.html
+++ b/product-detail.html
@@ -108,7 +108,7 @@
                         <div class="">1</div>
                         <div class="">+</div>
                     </div>
-                    <div class="button-2">Add to Cart</div>
+                    <div class="button-2"><a href="/cart.html"><button>Add to Cart</button></a></div>
                 </div>
             </div>
 
