--- a/shop-now.html
+++ b/shop-now.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <div class="sign-up container">
+        <div class="sign-up-link">
+            Sign up and get 20% off to your first order. <span class="click-me">Sign Up Now</span>
+        </div>
+        <div class="sign-up-cross">
+            <img src="/assets/images/sign-up-link/Frame.png" alt="cross">
+        </div>
+    </div>
     <header class="header">
         <nav class="nav container">
             <div class="navbar">
