Add some hover function and move to page href

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <header class="header">
         <nav class="nav container">
             <div class="navbar">
-                <div class="navbar-logo">SHOP.CO</div>
+                <div class="navbar-logo"><a href="/index.html">SHOP.CO</a></div>
                 <div class="navbar-link">
                     <ul class="links">
                         <li><a href="/product-detail.html">Shop <img src="/assets/images/navbar/Frame.png" alt=""></a>
                         </li>
-                        <li>On Sale</li>
+                        <li><a href="#top-sale">On Sale</a></li>
                         <li><a href="#new-arrivals">New Arrivals</a></li>
                         <li><a href="#brands">Brands</a></li>
                     </ul>
@@ -153,7 +153,7 @@
             <div class="btn"><button>View All</button></div>
         </section>
         <div class="line container"></div>
-        <section class="top-selling container">
+        <section class="top-selling container" id="top-sale">
             <div class="new-products-text">
                 <h2>top selling</h2>
             </div>
@@ -255,10 +255,10 @@
                     <div class="star"><img src="/assets/images/review-section/star.png" alt=""></div>
                     <div class="text">
                         <div class="text-wrapper">
-                            <div class="">
-                                <h6>Sarah M.</h6>
-                            </div>
-                            <div class="img"><img src="/assets/images/review-section/green-tick.png" alt=""></div>
+
+                            <h6>Sarah M.</h6>
+
+                            <img src="/assets/images/review-section/green-tick.png" alt="">
                         </div>
                         <div class="">
                             <p>"I'm blown away by the quality and style of the clothes I received from Shop.co. From
@@ -310,8 +310,7 @@
                 </div>
                 <div class="offer-section-details">
                     <div class="email">
-                        <div class="img"><img src="/assets/images/offer-section/email.png" alt=""></div>
-                        <div class="text"><span>Enter your email address</span></div>
+                        <div class="text"><input type="text" placeholder="Enter your email address"></div>
                     </div>
                     <div class="subscribe">
                         <p>Subscribe to Newsletter</p>
