--- a/product-detail.html
+++ b/product-detail.html
@@ -23,10 +23,11 @@
                 <div class="navbar-logo"><a href="/index.html">SHOP.CO</a></div>
                 <div class="navbar-link">
                     <ul class="links">
-                        <li>Shop <img src="/assets/images/navbar/Frame.png" alt=""></li>
-                        <li>On Sale</li>
-                        <li>New Arrivals</li>
-                        <li>Brands</li>
+                        <li><a href="/product-detail.html">Shop <img src="/assets/images/navbar/Frame.png" alt=""></a>
+                        </li>
+                        <li><a href="/index.html#top-sale">On Sale</a></li>
+                        <li><a href="/index.html#new-arrivals">New Arrivals</a></li>
+                        <li><a href="/index.html#brands">Brands</a></li>
                     </ul>
                 </div>
                 <div class="navbar-search-bar">
@@ -36,9 +37,7 @@
                 <div class="navbar-cart">
                     <img src="/assets/images/navbar/cart.png" alt="">
                 </div>
-
             </div>
-
         </nav>
     </header>
     <div class="line2 container"></div>
