--- a/shop-now.html
+++ b/shop-now.html
@@ -25,7 +25,7 @@
                     <ul class="links">
                         <li><a href="/product-detail.html">Shop <img src="/assets/images/navbar/Frame.png" alt=""></a>
                         </li>
-                        <li>On Sale</li>
+                        <li><a href="/index.html#top-sale">On Sale</a></li>
                         <li><a href="/index.html#new-arrivals">New Arrivals</a></li>
                         <li><a href="/index.html#brands">Brands</a></li>
                     </ul>
